--- a/PDFViewerUWPDemo/PDFViewerUWPDemo/PDFViewerUWP_PDFTron.csproj
+++ b/PDFViewerUWPDemo/PDFViewerUWPDemo/PDFViewerUWP_PDFTron.csproj
@@ -165,10 +165,10 @@
       <Version>6.2.10</Version>
     </PackageReference>
     <PackageReference Include="PDFTron.UWP">
-      <Version>7.2.0-beta1</Version>
+      <Version>8.0.1</Version>
     </PackageReference>
     <PackageReference Include="PDFTron.UWP.Tools">
-      <Version>7.2.0-beta1</Version>
+      <Version>8.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
